# napari-omnipose

./: LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
src/napari_omnipose/: __init__.py  _widget.py  napari.yaml
src/napari_omnipose/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
